--- a/README.adoc
+++ b/README.adoc
@@ -32,20 +32,9 @@ ifndef::env-github[:toc: left]
 :toc-title: Резюме / Summary
 :toclevels: 5
 
-
-== First of all
-
-It's very unusual to start a blog posting or even a blog platform altogether under the effect of magical mushrooms but yeah... I bet someone somewhere else did this exact same thing before...
-
-My name is doug (lowercase because I host a plethora of other dimensions of "self" pretty much - and unfortunately - unadressed whenever I may go). 
-
-Being alive for quite some time, and watched this reality for so long, brings me to the very objective question: 
-
-[quote,me]
-What kind of architecture and in which level of abstraction does the code that sustains it all, run?
-
 == Posts
 
+* https://blog.nullniverse.xyz/first-of-all[First of all]
 * https://blog.nullniverse.xyz/signed-commits[Signed commits and multi-account on Github]
 
 == Essays
