--- a/first-of-all.adoc
+++ b/first-of-all.adoc
@@ -17,9 +17,7 @@ author null8607@163.com
 
 It's very unusual to start a blog posting or even a blog platform altogether under the effect of magical mushrooms but yeah... I bet someone somewhere else did this exact same thing before...
 
-My name is doug (lowercase because I host a plethora of other dimensions of "self" pretty much - and unfortunately - unadressed whenever I may go). 
-
-Being alive for quite some time, and watched this reality for so long, brings me to the very objective question: 
+My name is doug and by being alive for quite some time, and watching this reality for so long, brings me to the very objective question: 
 
 [quote,me]
 What kind of architecture and in which level of abstraction does the code that sustains it all, run?
