--- a/README.adoc
+++ b/README.adoc
@@ -27,6 +27,10 @@ endif::[]
 :figure-caption: Фигура
 
 
+    <a href="//derelict.garden/prev/blog.nullniverse.xyz">←</a>
+    derelict garden webring
+    <a href="//derelict.garden/next/blog.nullniverse.xyz">→</a>
+
 = Я приветствую вас
 ifndef::env-github[:toc: left]
 :toc-title: Резюме / Summary
@@ -48,3 +52,4 @@ ifndef::env-github[:toc: left]
 == OSINT-me
 
 https://keybase.io/nullniverse[My Keybase]
+
