trying web ring

--- a/README.adoc
+++ b/README.adoc
@@ -27,6 +27,10 @@ endif::[]
 :figure-caption: Фигура
 
 
+    <a href="//derelict.garden/prev/blog.nullniverse.xyz">←</a>
+    derelict garden webring
+    <a href="//derelict.garden/next/blog.nullniverse.xyz">→</a>
+    
 = Я приветствую вас
 ifndef::env-github[:toc: left]
 :toc-title: Резюме / Summary
