--- a/README.adoc
+++ b/README.adoc
@@ -27,7 +27,7 @@ endif::[]
 :figure-caption: Фигура
 
 
-    link://derelict.garden/prev/blog.nullniverse.xyz[←] derelict garden webring link://derelict.garden/next/blog.nullniverse.xyz[→]
+    link:https://derelict.garden/prev/blog.nullniverse.xyz[←] derelict garden webring link:https://derelict.garden/next/blog.nullniverse.xyz[→]
 
 = Я приветствую вас
 ifndef::env-github[:toc: left]
