Added goodreads profile link

--- a/README.adoc
+++ b/README.adoc
@@ -62,4 +62,4 @@ https://derelict.garden/garden/garden-article-template.html[What the heck is thi
 
 https://keybase.io/nullniverse[My Keybase]
 https://t.me/nullniverseblog[Subscribe to my Telegram channel]
-
+https://www.goodreads.com/nullniverse[Follow me on GoodReads.com]
