--- a/cyberlayoffs.adoc
+++ b/cyberlayoffs.adoc
@@ -1,7 +1,6 @@
-:stylesheet: asciidoc-classic.css
+:stylesheet: adoc-rocket-panda.css
 :icons: font
 :allow-uri-read:
-:stylesheet: asciidoc-classic.css
 :imagesdir: /img
 
 ifndef::env-github[:toc: left]
