--- a/drafts/pod-recurrent-restart.adoc
+++ b/drafts/pod-recurrent-restart.adoc
@@ -1,6 +1,6 @@
 :icons: font
 :allow-uri-read:
-:stylesheet: asciidoc-classic.css
+:stylesheet: adoc-rocket-panda.css
 :imagesdir: /img
 
 = Pod Recurrent Restarts via Cronjobs
