--- a/README.adoc
+++ b/README.adoc
@@ -8,6 +8,7 @@
 :allow-uri-read:
 :stylesheet: adoc-rocket-panda.css
 :imagesdir: /img
+:favicon: /favicon.png
 
 
 ifdef::env-github[:outfilesuffix: .adoc]
