--- a/essays/first-of-all.adoc
+++ b/essays/first-of-all.adoc
@@ -8,7 +8,7 @@
 :allow-uri-read:
 :stylesheet: adoc-rocket-panda.css
 :imagesdir: /img
-:favicon: /favicon.ico
+:favicon: /favicon.png
 
 
 ifdef::env-github[:outfilesuffix: .adoc]
