--- a/README.adoc
+++ b/README.adoc
@@ -7,8 +7,8 @@
 :icons: font
 :allow-uri-read:
 :stylesheet: adoc-rocket-panda.css
-:imagesdir: /img
-:favicon: /favicon.png
+:imagesdir: img
+:favicon: favicon.png
 
 
 ifdef::env-github[:outfilesuffix: .adoc]
@@ -27,14 +27,16 @@ endif::[]
 ifndef::env-github[:toc: left]
 :toc-title: Summary
 :toclevels: 5
+:description: landing page of my personal blog page
+:keywords: blog, articles
 
-:description: это описание
-:listing-caption: Перечисление
-:figure-caption: Фигура
 
-derelict garden webring
+Member of Derelict Garden webring
 
-https://derelict.garden/prev/blog.nullniverse.xyz[previous blog,window=read-later]  https://derelict.garden/next/blog.nullniverse.xyz[next blog,window=read-later]
+image:derelict-garden.png[]
+
+
+https://derelict.garden/prev/blog.nullniverse.xyz[previous blog,window=read-later] | https://derelict.garden/next/blog.nullniverse.xyz[next blog,window=read-later]
 
 !!! BECOME A MEMBER !!!
 https://derelict.garden/enter.html[subscribe here]
@@ -46,15 +48,9 @@ https://derelict.garden/garden/garden-article-template.html[What the heck is thi
 
 * https://blog.nullniverse.xyz/posts/signed-commits[Signed commits and multi-account on Github]
 
-== Essays
-
-* https://blog.nullniverse.xyz/essays/first-of-all[First of all]
-
 == Projects
 
 * https://blog.nullniverse.xyz/manifesto[A Manifesto against poor cybersecurity meetups [PT-BR\]]
-* https://blog.nullniverse.xyz/cyberlayoffs[Cybersecurity Layoffs in Brazil]
-* https://github.com/nullniverse/ohUrlShortener[URL Shortener self-hosted]
 * https://github.com/nullniverse/jibengong[基本功 (jī běn gōng) - Studies kwoon]
 * https://memo.nullniverse.xyz[Memo]
 
