--- a/manifesto.adoc
+++ b/manifesto.adoc
@@ -7,8 +7,8 @@
 :icons: font
 :allow-uri-read:
 :stylesheet: adoc-rocket-panda.css
-:imagesdir: /img
-:favicon: /favicon.png
+:imagesdir: img
+:favicon: favicon.png
 
 
 ifdef::env-github[:outfilesuffix: .adoc]
@@ -22,10 +22,6 @@ ifdef::env-github,env-browser[]
 :warning-caption: :warning:
 endif::[]
 
-:chapter-label:
-:description: это описание
-:listing-caption: Перечисление
-:figure-caption: Фигура
 
 = Manifesto
 
