--- a/README.adoc
+++ b/README.adoc
@@ -27,7 +27,6 @@ endif::[]
 :description: landing page of my personal blog page
 :keywords: blog, articles
 
-
 Member of Derelict Garden webring
 
 image:derelict-garden.png[]
@@ -35,24 +34,22 @@ image:derelict-garden.png[]
 
 https://derelict.garden/prev/blog.nullniverse.xyz[previous blog,window=read-later] | https://derelict.garden/next/blog.nullniverse.xyz[next blog,window=read-later]
 
-!!! BECOME A MEMBER !!!
-https://derelict.garden/enter.html[subscribe here]
-
-
+Become a member! https://derelict.garden/enter.html[Subscribe here.]
 https://derelict.garden/garden/garden-article-template.html[What the heck is this garden thing?]
+
+This is my personal blog where I casually write about my interests, and the central hub for other projects!
 
 == Posts
 
 * https://blog.nullniverse.xyz/posts/signed-commits[Signed commits and multi-account on Github]
 
-== Projects
+== More
 
-* https://blog.nullniverse.xyz/manifesto[A Manifesto against poor cybersecurity meetups [PT-BR\]]
 * https://github.com/nullniverse/jibengong[基本功 (jī běn gōng) - Studies kwoon]
 * https://memo.nullniverse.xyz[Memo]
+* https://www.jumentosec.lol/[Jumento Security Conferences]
 
-== OSINT-me
-
+== About-me
 https://keybase.io/nullniverse[My Keybase]
 https://t.me/nullniverseblog[Subscribe to my Telegram channel]
-https://www.goodreads.com/nullniverse[Follow me on GoodReads.com]
+https://www.goodreads.com/nullniverse[Follow me on GoodReads.com!]
