--- a/README.adoc
+++ b/README.adoc
@@ -48,7 +48,7 @@ This is my personal blog where I casually write about my interests, and the cent
 * https://blog.nullniverse.xyz/posts/helm-chart-tricks[Helm charts tricks in ArgoCD]
 
 
-* https://blog.nullniverse.xyz/posts/signed-commits[Signed commits and multi-account on Github]
+* https://blog.nullniverse.xyz/posts/signed-commits[Signed commits and local Github multi-accounting]
 
 == More
 
