--- a/posts/pod-recurrent-restarts.adoc
+++ b/posts/pod-recurrent-restarts.adoc
@@ -1,20 +1,41 @@
+:revealjsdir: https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0
+:revealjs_slideNumber: true
+:stem: latexmath
+:source-highlighter: highlight.js
+:highlightjs-languages: c, cpp, hpp, cc, hh, c++, h++, cxx, hxx, h, rust, swift, go, golang, elixir, xml, html, xhtml, rss, atom, xjb, xsd, xsl, plist, svg, java, jsp, json, javascript, js, jsx, kotlin, kt, tex, lisp, perl, pl, pm, powershell, ps, ps1, pgsql, postgres, postgresql, python, py, gyp, ruby, rb, gemspec, podspec, thor, irb, rust, rs, sql, yml, yaml
+
 :icons: font
 :allow-uri-read:
 :stylesheet: adoc-rocket-panda.css
 :imagesdir: /img
+:favicon: /favicon.png
+
+
+ifdef::env-github[:outfilesuffix: .adoc]
+
+ifdef::env-github,env-browser[]
+// Exibe ícones para os blocos como NOTE e IMPORTANT no GitHub
+:caution-caption: :fire:
+:important-caption: :exclamation:
+:note-caption: :paperclip:
+:tip-caption: :bulb:
+:warning-caption: :warning:
+endif::[]
 
 = Pod Recurrent Restarts via Cronjobs
 ifndef::env-github[:toc: left]
-:toc-title: Резюме / Summary
+:toc-title: Table of Contents
 :toclevels: 5
 
 ---
 
-author @nullniverse
-1.0, 07-28-2023: Mandarin
+Nullniverse boverflow@bk.ru
+1.0, 05-03-2024: Helm, ArgoCD
 
 ---
+https://blog.nullniverse.xyz[_Return to /_]
 
+Ever wondered how to cycle your deployment/pods the native way? Say no more:
 
 [source,shell]
 ----
@@ -76,6 +97,4 @@ spec:
           restartPolicy: Never
 EOF
 ----
-
-Cheers!
 
