fixing wrong routing

--- a/blog/2024-05-03-pod-recurrent-restarts/index.mdx
+++ b/blog/2024-05-03-pod-recurrent-restarts/index.mdx
@@ -2,7 +2,7 @@
 slug: pod-recurrent-restarts
 title: Pod Recurrent Restarts via Cronjobs
 authors: [nullniverse]
-tags: [blogging,helm]
+tags: [blogging,kubernetes]
 ---
 
 _Ever wondered how to cycle your deployment/pods the native way? Think no more!_
