post: adding post

--- a/blog/2022-03-10-signed-commits/index.mdx
+++ b/blog/2022-03-10-signed-commits/index.mdx
@@ -7,7 +7,7 @@ tags: [blogging,git]
 
 _This guide is just a collection of steps and use case for implementing multi-account authentication on Github in your local machine._
 
-<!--truncate-->
+{/* truncate */}
 
 ---
 
