--- a/blog/2024-04-11-helm-chart-tricks/index.mdx
+++ b/blog/2024-04-11-helm-chart-tricks/index.mdx
@@ -7,7 +7,7 @@ tags: [blogging,helm]
 
 _Some trick to alleviate the daily Helm burden of managing multiple equal resources in your deployments._
 
-<!--truncate-->
+{/* truncate */}
 
 ---
 
