--- a/blog/2024-05-03-pod-recurrent-restarts/index.mdx
+++ b/blog/2024-05-03-pod-recurrent-restarts/index.mdx
@@ -7,7 +7,9 @@ tags: [blogging,kubernetes]
 
 _Ever wondered how to cycle your deployment/pods the native way? Think no more!_
 
-<!--truncate-->
+ {/* truncate */}
+
+---
 
 ```jsx title="Roles and account creation" showLineNumbers
 kubectl apply -f - <<EOF
