--- a/blog/2022-03-10-signed-commits/index.mdx
+++ b/blog/2022-03-10-signed-commits/index.mdx
@@ -168,6 +168,6 @@ include]
 
 One thing to notice in the above configuration is that you can use more than one signing key, or use the same to signed-commit in both projects - make sure your boss don't work two part-time jobs, if you'll just one key btw. 
 
-If you're taking advantage of this pandemic and working more than one all-remote job, you could negotiate to use your same username and enjoy a multi-org config. Just create more .git-professional-<number> files and more `[includeIf]` entries in your `.gitconfig` file.
+If you're taking advantage of this pandemic and working more than one all-remote job, you could negotiate to use your same username and enjoy a multi-org config. Just create more .git-professional-`<number>` files and more `[includeIf]` entries in your `.gitconfig` file.
 
 That's it.
